--- a/web-app/src/main/resources/static/css/sale.css
+++ b/web-app/src/main/resources/static/css/sale.css
@@ -345,6 +345,10 @@
     color: #6c757d;
 }
 
+input.custom-select-placeholder {
+    width: 100%;
+}
+
 .custom-select-dropdown {
     position: absolute;
     top: 100%;
