--- a/web-app/src/main/resources/templates/settings.html
+++ b/web-app/src/main/resources/templates/settings.html
@@ -274,8 +274,8 @@
         <input type="text" id="newStorageName" required>
     </div>
     <div class="form-field">
-        <label for="newStorageLocation">Локація:</label>
-        <input type="text" id="newStorageLocation" required>
+        <label for="newStorageDescription">Опис:</label>
+        <input type="text" id="newStorageDescription">
     </div>
     <button id="createStorageBtn">Створити cклад</button>
 </div>
