--- a/web-app/src/main/resources/templates/warehouse.html
+++ b/web-app/src/main/resources/templates/warehouse.html
@@ -93,6 +93,7 @@
     <table id="warehouse-table">
         <thead>
         <tr>
+            <th>Склад</th>
             <th>Дата</th>
             <th>Водій</th>
             <th>Продукт</th>
@@ -134,6 +135,10 @@
                                 <label for="product-id-filter">Продукт:</label>
                                 <select id="product-id-filter" name="product_id" multiple></select>
                             </div>
+                            <div class="select-section-item">
+                                <label for="warehouse-id-filter">Склад:</label>
+                                <select id="warehouse-id-filter" name="warehouse_id" multiple></select>
+                            </div>
                         </div>
                     </div>
                     <div class="filter-actions">
@@ -150,6 +155,13 @@
             <form id="entryForm">
                 <h3>Додати надходження:</h3>
                 <div class="entry-block">
+                    <div class="entry-item">
+                        <label for="warehouse-id">Склад:</label>
+                        <select id="warehouse-id" name="warehouse_id" required></select>
+                    </div>
+<!--                    <label for="warehouse-id">Склад:</label>
+                    <select id="warehouse-id" required></select>-->
+
                     <div class="entry-item">
                         <label for="entry-date">Дата:</label>
                         <input type="date" id="entry-date" name="entry_date" required>
