--- a/web-app/src/main/resources/static/css/containers.css
+++ b/web-app/src/main/resources/static/css/containers.css
@@ -682,6 +682,176 @@
     background-color: var(--dark-green);
 }
 
+
+/*--modal-purchase-client--*/
+
+.modal-container-client,
+.modal-purchase-client,
+.modal-sale-client {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 11;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.modal-container-client-content,
+.modal-purchase-client-content,
+.modal-sale-client-content {
+    font-size: var(--rem);
+    background-color: #fff;
+    padding: 1em;
+    border-radius: 8px;
+    width: 60em;
+    max-height: 40em;
+    overflow-y: auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(0.9);
+    transition: transform 0.3s ease;
+}
+
+.modal-container-client.show,
+.modal-purchase-client.show,
+.modal-sale-client.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal-container-client.show .modal-container-client-content,
+.modal-purchase-client.show .modal-purchase-client-content,
+.modal-sale-client.show .modal-sale-client-content {
+    transform: scale(1);
+}
+
+#containerTable,
+#purchaseTable,
+#saleTable {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 1em;
+}
+
+#containerTable th, #containerTable td,
+#purchaseTable th, #purchaseTable td,
+#saleTable th, #saleTable td {
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+#containerTable th,
+#purchaseTable th,
+#saleTable th {
+    background-color: var(--bright-green, #4CAF50);
+    color: #fff;
+    padding: 0.2em;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-bottom: 2px solid #ddd;
+    cursor: pointer;
+    white-space: nowrap;
+    font-size: 0.8em;
+    font-family: Roboto, sans-serif;
+    text-align: center;
+}
+
+#closeContainerModal,
+#closePurchaseModal,
+#closeSaleModal {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    cursor: pointer;
+    font-size: 2em;
+    font-weight: bold;
+    color: #333;
+    transition: color 0.3s ease;
+}
+
+#closeContainerModal:hover,
+#closePurchaseModal:hover,
+#closeSaleModal:hover {
+    color: red;
+}
+
+#client-id-container,
+#client-id-purchase,
+#client-id-sale {
+    font-size: 1.5rem;
+    margin-bottom: 2em;
+    color: var(--dark-blue);
+    margin-top: 0;
+}
+
+.section-client-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
+.section-client-buttons-block {
+    display: flex;
+    margin: 1em 0 0 0;
+    gap: 1em;
+}
+
+.client-action-info-button {
+    --color: var(--dark-blue);
+    font-family: inherit;
+    display: inline-block;
+    width: 6em;
+    height: 2.3em;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    border: 2px solid var(--color);
+    transition: color 0.3s;
+    z-index: 1;
+    font-size: 1.3rem;
+    border-radius: 6px;
+    font-weight: 500;
+    color: var(--color);
+}
+
+.client-action-info-button:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: var(--color);
+    height: 150px;
+    width: 200px;
+    border-radius: 50%;
+}
+
+.client-action-info-button:hover {
+    color: #fff;
+}
+
+.client-action-info-button:before {
+    top: 100%;
+    left: 100%;
+    transition: all 0.5s;
+}
+
+.client-action-info-button:hover:before {
+    top: -30px;
+    left: -30px;
+}
+
+.client-action-info-button:active:before {
+    background: #3a0ca3;
+    transition: background 0s;
+}
+
+
 /*--pagination--*/
 
 #pagination {
