--- a/web-app/src/main/resources/templates/warehouse.html
+++ b/web-app/src/main/resources/templates/warehouse.html
@@ -96,7 +96,7 @@
             <th>Склад</th>
             <th>Дата</th>
             <th>Водій</th>
-            <th>Продукт</th>
+            <th>Товар</th>
             <th>Привезено</th>
             <th>Закуплено</th>
             <th>Різниця</th>
@@ -132,7 +132,7 @@
                                 <select id="user-id-filter" name="user_id" multiple></select>
                             </div>
                             <div class="select-section-item">
-                                <label for="product-id-filter">Продукт:</label>
+                                <label for="product-id-filter">Товар:</label>
                                 <select id="product-id-filter" name="product_id" multiple></select>
                             </div>
                             <div class="select-section-item">
@@ -171,7 +171,7 @@
                         <select id="user-id" name="user_id" required></select>
                     </div>
                     <div class="entry-item">
-                        <label for="product-id">Продукт:</label>
+                        <label for="product-id">Товар:</label>
                         <select id="product-id" name="product_id" required></select>
                     </div>
                     <div class="entry-item">
