--- a/web-app/src/main/resources/templates/stock.html
+++ b/web-app/src/main/resources/templates/stock.html
@@ -91,12 +91,12 @@
                 <label style="display: none" for="reason-type"></label>
                 <select id="reason-type" required>
                     <option value="">Оберіть причину</option>
-                    <option value="SHIPMENT">Відгрузка машини</option>
+                    <option value="SHIPMENT">Відвантаження машини</option>
                     <option value="WASTE">Залишок сміття</option>
                 </select>
                 <label style="display: none" for="product-id"></label>
                 <select id="product-id" required>
-                    <option value="">Оберіть продукт</option>
+                    <option value="">Оберіть товар</option>
                 </select>
                 <label style="display: none" for="warehouse-id"></label>
                 <select id="warehouse-id" required>
@@ -122,12 +122,12 @@
                 <label style="display: none" for="edit-reason-type"></label>
                 <select id="edit-reason-type" required>
                     <option value="">Оберіть причину</option>
-                    <option value="SHIPMENT">Відгрузка машини</option>
+                    <option value="SHIPMENT">Відвантаження машини</option>
                     <option value="WASTE">Залишок сміття</option>
                 </select>
                 <label style="display: none" for="edit-product-id"></label>
                 <select id="edit-product-id" required>
-                    <option value="">Оберіть продукт</option>
+                    <option value="">Оберіть товар</option>
                 </select>
                 <label style="display: none" for="edit-quantity"></label>
                 <input type="number" id="edit-quantity" step="0.01" min="0" placeholder="Кількість (кг)" required>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="select-section-items">
                             <div class="select-section-item">
-                                <label for="product-id-filter">Продукт:</label>
+                                <label for="product-id-filter">Товар:</label>
                                 <select id="product-id-filter" name="product_id" multiple></select>
                             </div>
                             <div class="select-section-item">
@@ -184,7 +184,7 @@
             <thead>
             <tr>
                 <th>Склад</th>
-                <th>Продукт</th>
+                <th>Товар</th>
                 <th>Причина</th>
                 <th>Кількість</th>
                 <th>Дата списання</th>
