--- a/web-app/src/main/resources/static/css/sale.css
+++ b/web-app/src/main/resources/static/css/sale.css
@@ -602,7 +602,7 @@ input.custom-select-placeholder {
 
 /*company*/
 #sale-list th:nth-child(1) {
-    width: 25%;
+    width: 20%;
 }
 
 /*product*/
@@ -645,13 +645,18 @@ input.custom-select-placeholder {
     width: 5%;
 }
 
+/*exchangeRate*/
+#purchase-list th:nth-child(10) {
+    width: 5%;
+}
+
 /*data*/
-#sale-list th:nth-child(10) {
+#purchase-list th:nth-child(11) {
     width: 10%;
 }
 
 /*actions*/
-#sale-list th:nth-child(11) {
+#purchase-list th:nth-child(12) {
     width: 5%;
 }
 
