--- a/web-app/src/main/resources/templates/routes.html
+++ b/web-app/src/main/resources/templates/routes.html
@@ -488,6 +488,10 @@
                 <option value="EUR">EUR</option>
                 <option value="USD">USD</option>
             </select><br><br>
+
+            <label for="exchangeRateSale" id="exchangeRateSaleLabel" style="display: none;">Курс:</label>
+            <input type="number" id="exchangeRateSale" name="exchangeRateSale" step="0.000001" min="0" style="display: none;"><br><br>
+
             <input type="hidden" id="clientIdSale" name="clientIdSale">
             <input type="hidden" id="sourceIdSale" name="sourceIdSale">
             <button type="submit">Продати</button>
@@ -519,6 +523,10 @@
                 <option value="EUR">EUR</option>
                 <option value="USD">USD</option>
             </select><br><br>
+
+            <label for="exchangeRatePurchase" id="exchangeRatePurchaseLabel" style="display: none;">Курс:</label>
+            <input type="number" id="exchangeRatePurchase" name="exchangeRatePurchase" step="0.000001" min="0" style="display: none;"><br><br>
+
             <input type="hidden" id="clientIdPurchase" name="clientIdPurchase">
             <input type="hidden" id="sourceIdPurchase" name="sourceIdPurchase">
             <button type="submit">Купити</button>
