--- a/web-app/src/main/resources/templates/purchase.html
+++ b/web-app/src/main/resources/templates/purchase.html
@@ -330,7 +330,7 @@
                 <input type="date" name="createdAt" required>
             </label>
             <label>Курс:
-                <input type="number" name="exchangeRate" step="0.000001" min="0" required>
+                <input type="number" name="exchangeRate" step="0.000001" min="0">
             </label>
             <label class="edit-source" style="display: none;">Залучення:
                 <select name="sourceId" class="edit-source"></select>
