add warehouse options

--- a/web-app/src/main/resources/templates/stock.html
+++ b/web-app/src/main/resources/templates/stock.html
@@ -93,6 +93,8 @@
                     <option value="">Оберіть причину</option>
                     <option value="SHIPMENT">Відвантаження машини</option>
                     <option value="WASTE">Залишок сміття</option>
+                    <option value="FUSES">Фузи</option>
+                    <option value="FERMENTATION">Ферментація</option>
                 </select>
                 <label style="display: none" for="product-id"></label>
                 <select id="product-id" required>
