--- a/web-app/src/main/resources/templates/containers.html
+++ b/web-app/src/main/resources/templates/containers.html
@@ -187,11 +187,11 @@
     <table>
         <thead>
         <tr>
-            <th data-sort="company">Клієнт</th>
-            <th data-sort="barrelType">Тип тари</th>
-            <th data-sort="quantity">Кількість</th>
-            <th data-sort="userId">Власник</th>
-            <th data-sort="updatedAt">Оновлено</th>
+            <th>Клієнт</th>
+            <th>Тип тари</th>
+            <th>Кількість</th>
+            <th>Власник</th>
+            <th>Оновлено</th>
         </tr>
         </thead>
         <tbody id="barrel-table-body">
