--- a/web-app/src/main/resources/templates/routes.html
+++ b/web-app/src/main/resources/templates/routes.html
@@ -173,7 +173,13 @@
                     <label class="select-label-style" for="source-filter">Залучення:</label>
                     <select id="source-filter" name="source" multiple>
                     </select>
+                </div>
 
+                <div class="select-section-item">
+                    <br>
+                    <label class="select-label-style" for="client-product-filter">Товар:</label>
+                    <select id="client-product-filter" name="clientProduct" multiple>
+                    </select>
                 </div>
             </div>
 
@@ -195,7 +201,7 @@
             <th data-sort="location">Адреса</th>
             <th>Телефони</th>
             <th data-sort="route">Маршрут</th>
-            <th data-sort="price">Ціна</th>
+            <th>Ціна</th>
             <th data-sort="status">Статус</th>
             <th data-sort="urgently">!</th>
         </tr>
@@ -319,6 +325,11 @@
             <span id="modal-client-source"></span>
             <i id="edit-source" class="edit-icon" onclick="enableSelect('source', availableSources)">✏️</i>
         </p>
+        <p class="modal-content-client-product">
+            <strong>Товар:</strong>
+            <span id="modal-client-clientProduct"></span>
+            <i id="edit-clientProduct" class="edit-icon" onclick="enableSelect('clientProduct', availableClientProducts)">✏️</i>
+        </p>
         <p>
             <strong>Коментар:</strong>
             <span id="modal-client-comment"></span>
@@ -372,6 +383,9 @@
             <select id="source" name="sourceId">
                 <option value="" disabled selected>Залучення</option>
             </select>
+            <select id="clientProduct" name="clientProductId">
+                <option value="" disabled selected>Товар</option>
+            </select>
             <select id="route" name="routeId">
                 <option value="" disabled selected>Маршрут</option>
             </select>
@@ -396,6 +410,7 @@
 <label style="display: none" for="route"></label>
 <label style="display: none" for="business"></label>
 <label style="display: none" for="volumeMonth"></label>
+<label style="display: none" for="clientProduct"></label>
 
 <div id="purchaseClientModal" class="modal-purchase-client" style="display: none;">
     <div class="modal-purchase-client-content">
