--- a/web-app/src/main/resources/templates/routes.html
+++ b/web-app/src/main/resources/templates/routes.html
@@ -247,6 +247,13 @@
     <div class="modal-content-client">
         <span id="close-modal-client" class="close">&times;</span>
         <h1><span id="modal-client-id"></span></h1>
+        <div class="section-client-buttons">
+            <div class="section-client-buttons-block">
+                <button id="show-purchases-client" class="client-action-info-button">Закупівлі</button>
+                <button id="show-sale-client" class="client-action-info-button">Продажі</button>
+                <button id="show-containers-client" class="client-action-info-button">Тара</button>
+            </div>
+        </div>
         <p>
             <strong>Компанія:</strong>
             <span id="modal-client-company"></span>
@@ -347,12 +354,6 @@
             <div class="section-client-buttons-block">
                 <button id="save-client" onclick="saveClientChanges()">Зберегти зміни</button>
                 <button id="cancel-client" onclick="cancelClientChanges()" style="display: none;">Відмінити</button>
-            </div>
-
-            <div class="section-client-buttons-block">
-                <button id="show-purchases-client" class="client-action-info-button">Закупівлі</button>
-                <button id="show-sale-client" class="client-action-info-button">Продажі</button>
-                <button id="show-containers-client" class="client-action-info-button">Тара</button>
             </div>
 
             <div class="section-client-buttons-block">
