add moving to stock

--- a/web-app/src/main/resources/templates/stock.html
+++ b/web-app/src/main/resources/templates/stock.html
@@ -95,6 +95,7 @@
                     <option value="WASTE">Залишок сміття</option>
                     <option value="FUSES">Фузи</option>
                     <option value="FERMENTATION">Ферментація</option>
+                    <option value="MOVING">Переміщення</option>
                 </select>
                 <label style="display: none" for="product-id"></label>
                 <select id="product-id" required>
