v1 to fix ios cash

--- a/web-app/src/main/resources/templates/balance.html
+++ b/web-app/src/main/resources/templates/balance.html
@@ -2,9 +2,17 @@
 <html lang="ua">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Balance</title>
 
+    <link rel="stylesheet" href="/css/ios-safari-fix.css">
     <link rel="stylesheet" href="/css/balance.css">
     <link rel="stylesheet" href="/css/common.css">
 
@@ -197,6 +205,7 @@
 </div>
 
 <script src="https://unpkg.com/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="/js/ios-safari-fix.js"></script>
 <script src="/js/common.js"></script>
 <script src="/js/balance.js"></script>
 <script src="/js/error.js"></script>
