--- a/web-app/src/main/resources/templates/inventory.html
+++ b/web-app/src/main/resources/templates/inventory.html
@@ -2,10 +2,17 @@
 <html lang="ua">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Inventory</title>
 
-
+    <link rel="stylesheet" href="/css/ios-safari-fix.css">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/inventory.css">
 
@@ -111,6 +118,7 @@
     <div id="loader" class="loader"></div>
 </div>
 
+<script src="/js/ios-safari-fix.js"></script>
 <script src="/js/inventory.js"></script>
 <script src="/js/common.js"></script>
 <script src="/js/error.js"></script>
