--- a/web-app/src/main/resources/templates/purchase.html
+++ b/web-app/src/main/resources/templates/purchase.html
@@ -7,9 +7,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="format-detection" content="telephone=no">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
     <title>Purchase</title>
 
     <link rel="stylesheet" href="/css/ios-safari-fix.css">
