--- a/web-app/src/main/resources/static/css/purchase.css
+++ b/web-app/src/main/resources/static/css/purchase.css
@@ -602,7 +602,7 @@ input.custom-select-placeholder {
 
 /*company*/
 #purchase-list th:nth-child(1) {
-    width: 25%;
+    width: 23%;
 }
 
 /*product*/
@@ -652,12 +652,17 @@ input.custom-select-placeholder {
 
 /*data*/
 #purchase-list th:nth-child(11) {
-    width: 10%;
+    width: 8%;
+}
+
+/*comment*/
+#purchase-list th:nth-child(12) {
+    width: 15%;
 }
 
 /*actions*/
-#purchase-list th:nth-child(12) {
-    width: 5%;
+#purchase-list th:nth-child(13) {
+    width: 6%;
 }
 
 
@@ -771,10 +776,30 @@ input.custom-select-placeholder {
 }
 
 .edit-modal-content input:focus,
-.edit-modal-content select:focus {
+.edit-modal-content select:focus,
+.edit-modal-content textarea:focus {
     border-color: #007bff;
     outline: none;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+}
+
+.edit-modal-content textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 1em;
+    box-sizing: border-box;
+    transition: border-color 0.3s ease;
+    resize: vertical;
+    min-height: 60px;
+    font-family: inherit;
+}
+
+.edit-modal-content textarea::placeholder {
+    color: #aaa;
+    font-style: italic;
 }
 
 .edit-modal-content button {
