--- a/web-app/src/main/resources/templates/routes.html
+++ b/web-app/src/main/resources/templates/routes.html
@@ -62,11 +62,8 @@
             <li id="nav-balance"><a href="/balance">
                 Баланс грошовий
             </a></li>
-            <li id="nav-warehouse"><a href="/warehouse">
-                Склад
-            </a></li>
             <li id="nav-stock"><a href="/stock">
-                Баланс складу
+                Склад
             </a></li>
             <li id="nav-analytics"><a href="/analytics">
                 Аналітика
@@ -239,7 +236,6 @@
 
             <button type="submit">Побудувати</button>
         </form>
-        <!--<div id="map" style="height: 1px; width: 1px;"></div>-->
     </div>
 </div>
 
@@ -352,7 +348,6 @@
         <p><strong>Терміновий заїзд:</strong>
             <label style="display: none" for="modal-client-urgently"></label>
             <input type="checkbox" id="modal-client-urgently"></p>
-        <!--<p><strong>Остання закупівля:</strong> <span id="modal-client-lastPurchaseDate" data-client-id=""></span></p>-->
         <p><strong>Створено:</strong> <span id="modal-client-created"></span></p>
         <p><strong>Оновлено:</strong> <span id="modal-client-updated"></span></p>
 
@@ -549,6 +544,9 @@
 
             <label for="exchangeRatePurchase" id="exchangeRatePurchaseLabel" style="display: none;">Курс:</label>
             <input type="number" id="exchangeRatePurchase" name="exchangeRatePurchase" step="0.000001" min="0" style="display: none;"><br><br>
+
+            <label for="commentPurchase">Коментар:</label>
+            <textarea id="commentPurchase" name="commentPurchase" rows="3" placeholder=""></textarea><br><br>
 
             <input type="hidden" id="clientIdPurchase" name="clientIdPurchase">
             <input type="hidden" id="sourceIdPurchase" name="sourceIdPurchase">
