--- a/web-app/src/main/resources/templates/login.html
+++ b/web-app/src/main/resources/templates/login.html
@@ -2,16 +2,9 @@
 <html lang="ua">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <link rel="stylesheet" href="/css/ios-safari-fix.css">
     <link rel="stylesheet" href="/css/login.css">
 
     <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96"/>
@@ -35,7 +28,6 @@
 
 <div id="error-message" style="color: red; margin-top: 10px;"></div>
 
-<script src="/js/ios-safari-fix.js"></script>
 <script src="/js/login.js"></script>
 </body>
 </html>
