--- a/web-app/src/main/resources/templates/routes.html
+++ b/web-app/src/main/resources/templates/routes.html
@@ -2,16 +2,9 @@
 <html lang="ua">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Route</title>
 
-    <link rel="stylesheet" href="/css/ios-safari-fix.css">
     <link rel="stylesheet" href="/css/routes.css">
     <link rel="stylesheet" href="/css/common.css">
 
@@ -584,7 +577,6 @@
 </div>
 
 
-<script src="/js/ios-safari-fix.js"></script>
 <script src="/js/routes.js"></script>
 <script src="/js/createCustomSelect.js"></script>
 <script src="/js/common.js"></script>
