--- a/web-app/src/main/resources/templates/stock.html
+++ b/web-app/src/main/resources/templates/stock.html
@@ -271,7 +271,7 @@
                 <input type="number" id="balance-edit-quantity" step="0.01" min="0">
             </div>
             <div class="form-row">
-                <label for="balance-edit-total-cost">Нова загальна вартість (грн):</label>
+                <label for="balance-edit-total-cost">Нова загальна вартість (EUR):</label>
                 <input type="number" id="balance-edit-total-cost" step="0.000001" min="0" disabled>
             </div>
             <div class="form-row">
@@ -778,7 +778,7 @@
         </table>
         
         <div class="shipment-total">
-            <strong>Загальна вартість машини: <span id="shipment-total-cost">0</span> грн</strong>
+            <strong>Загальна вартість машини: <span id="shipment-total-cost">0</span> EUR</strong>
         </div>
         
         <div class="shipment-actions-bottom">
@@ -836,7 +836,7 @@
             </div>
 
             <div class="form-row">
-                <label for="edit-shipment-item-total-cost">Нова загальна вартість (грн):</label>
+                <label for="edit-shipment-item-total-cost">Нова загальна вартість (EUR):</label>
                 <input type="number" id="edit-shipment-item-total-cost" step="0.000001" min="0" disabled>
             </div>
 
